# ferrimoji

./: Cargo.toml  README.markdown
src/: lib.rs  main.rs
